--- a/themes/LoveIt/layouts/partials/head.html
+++ b/themes/LoveIt/layouts/partials/head.html
@@ -1,5 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="noodp" />
+<meta name="baidu-site-verification" content="6GkDhoZ3Pq" />
+
 <meta name="Description" content="{{ .Params.description | default .Site.Params.description }}">
 {{ with .Site.Params.google_verification -}}
     <meta name="google-site-verification" content="{{ . }}" />
